# venue

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .gitmodules  .tool-versions  Dockerfile  LICENSE  README.md  deno.json  docker-compose.yml  index.js  package-lock.json  package.json  pyproject.toml  task
.circleci/: config.yml
.github/workflows/: build.yaml
_old/: .gitignore  .tool-versions  task
back/: deno.json
back/src/: import_map.json  lock.json  main.ts
cloud/azure/: deploy-registry.sh  deploy.sh  template-registry.json  template.json  variables.dist.sh
docker/: Dockerfile  docker-compose.build.yml  docker-compose.devenv.yml
docker/eventtoolbox-devenv/: docker-compose.yml
docker/testing/: Dockerfile  docker-compose.yml  run.sh
e2e/: package-lock.json  package.json
meta/: async-start.sh  compose.sh  devenv.sh  fmt.sh  granian-start.sh  gunicorn-start.sh  install.sh  lint.sh  manage.sh  migrate.sh  poetry.sh  profile.sh  resetmigrations.sh  setup.sh  start.sh  update-dependencies.sh
meta/_/: env.sh
meta/_docker/: Dockerfile  start.sh
meta/devenv/: compose.sh
meta/docker/: build.sh  publish.sh  start.sh
meta/e2e/: install.sh  playwright.sh  test.sh  update-dependencies.sh
meta/perf/: install.sh  start.sh  update-dependencies.sh
modules/deploy/: Caddyfile  docker-compose.yml
modules/e2e/: package-lock.json  package.json
modules/server/: deno.json
resources/db-migrations/: 0001-init.sql
scripts/: backup.sh  deploy.sh  ssh.py  variables.dist.sh
src/: app.js  main.ts  manage.py
test/: app.spec.js
(+179 files in other folders)
