[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
ruff = "^0.12.7"
pyinstrument = "^5.0.3"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.0"
psycopg = { extras = ["binary"], version = "^3.1.19" }
pillow = "^11.0.0"
django-prose-editor = { extras = ["sanitize"], version = "^0.8.1" }
django-constance = "^4.1.1"
granian = "^2.5.0"
